--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="box py-4 px-3 rounded-4">
                     <h4 class="mb-4">Students System</h4>
-                    <form>
+                    <form data-type="add">
                         <div class="input-group mb-3">
                             <span class="input-group-text">
                                 <i class="fa-solid fa-user"></i>
