--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             >
                         </div>
                         <p class="alert alert-danger d-none text-start"></p>
-                        <button class="btn btn-success w-100">Add</button>
+                        <button class="btn btn-success w-100 text-light">Add</button>
                     </form>
                 </div>
             </div>
